# scientific-discover

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  使用说明.md  停止科研助手.bat  启动科研助手.bat  检查环境.bat
.github/workflows/: ci.yml
backend/: .env.example  doctor.py  eval_suite.py  export_openapi.py  requirements.txt  selftest.py  sidecar_entry.py  test_analyze_retry.py  test_candidates.py  test_clinicaltrials.py  test_config.py  test_danger_guard.py  test_deai.py  test_deidentify.py  test_doctor.py  test_endpoints.py  test_fallback.py  test_literature_rank.py  test_medical_charts.py  test_ncbi_throttle.py  test_network_retry.py  test_onboarding.py  test_openalex.py  test_projects.py  test_randomize.py  test_refcheck.py  test_refio.py  test_review_fixes.py  test_run_validation.py  test_searchfilters.py  test_statcheck.py  test_static_cache.py  test_textio.py  test_upload_limit.py
backend/app/: analysis.py  citations.py  clinicaltrials.py  config.py  config_io.py  crossref.py  dataanalysis.py  deai.py  deidentify.py  ethics.py  europepmc.py  extract.py  llm.py  (+30 more)
docs/: api-contracts.md  api-openapi.json
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
scripts/: build-sidecar.ps1  dev.ps1  publish-release.ps1  release-notes.md  setup.ps1  允许局域网访问.bat  诊断局域网.bat
src-tauri/: Cargo.toml  README.md  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
改进日志/: 2026-06-28-医生UX验收待修复bug.md  BACKLOG.md  LOG.md  LOOP改进指令.md
(+85 files in other folders)
